--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,27 +2,30 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    android:id="@+id/mobile_navigation"
+    app:startDestination="@+id/navigation_home">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.logituit.moviedbadi.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:id="@+id/navigation_home"
+        android:name="com.logituit.moviedbadi.ui.home.HomeFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_home">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_navigation_home_to_movie_details"
+            app:destination="@id/movie_details"
+            />
     </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.logituit.moviedbadi.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+
+    <dialog
+        android:id="@+id/movie_details"
+        android:name="com.logituit.moviedbadi.ui.detail.MovieDetailFragment"
+        android:label="@string/title_movie_details"
+        tools:layout="@layout/fragment_movie_detail">
+        <argument
+            android:name="movieData"
+            app:argType="com.logituit.moviedbadi.domain.model.MovieData"
+            />
+    </dialog>
 </navigation>
