--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange_200">#ffc947</color>
+    <color name="orange_500">#ff9800</color>
+    <color name="orange_700">#F57C00</color>
+    <color name="ripple_color">#7F717171</color>
+    <color name="gray">#ccc</color>
+    <color name="background_gray">#121212</color>
+    <color name="light_background_gray">#292929</color>
 </resources>
